# Cortex

./: .gitignore  CLAUDE.md  LICENSE  README.md  cortex_backend.spec  launcher.py  requirements.txt
backend/: ai_client.py  brain_pipeline.py  clusters.py  dap_manager.py  database.py  diff_engine.py  docx_generator.py  embeddings.py  git_manager.py  main.py  memory_store.py  parser.py  pdf_generator.py  port_manager.py  ppt_generator.py  terminal_manager.py
backend/workers/: airllm_worker.py  comms_bridge.py  cookbook.py  predictive_engine.py  reminder_daemon.py  research_agent.py  task_queue.py  voice_worker.py
backend/workers/whisper.cpp/.devops/: main-intel.Dockerfile  main-vulkan.Dockerfile
backend/workers/whisper.cpp/.github/workflows/: build-android.yml  build-clang.yml  build-coreml.yml  build-cpu.yml  build-freebsd.yml  build-gcc.yml  build-macos.yml  build-quantize.yml  build-sanitize.yml  build-self-hosted.yml  build-sycl.yml  build-vad.yml  build-wasm.yml  build-windows.yml  deploy-examples-wasm.yml  docker.yml  examples.yml  release.yml
docs/images/: .gitkeep
frontend/: .stylelintrc.json  _tauri_loading.html  app-v12.js  debugger.js  docstudio.css  docstudio.js  index.html  menubar.js  model-worker.js  richtext.css  richtext.js  studio.css  studio.js  style-v12.css  style.css  terminal.html  utilities.css  utilities.js
scripts/: build_installers.sh
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
