[package]
name = "cortex-ide"
version = "0.7.0"
description = "Cortex IDE — local-first AI Data Intelligence OS"
authors = ["Mind Palace"]
edition = "2021"
rust-version = "1.77"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
custom-protocol = ["tauri/custom-protocol"]
